--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -6,12 +6,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Tudo sobre Google Glass</title>
-        <style>
-            p{
-                text-align: justify;
-                text-indent: 50px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        
 
     </head>
 
@@ -23,9 +19,10 @@
 <h1>Glass</h1> 
 <h2> revolução do Google está chegando</h2>
 </hgroup>
-
+<figure>
+        
 <img src="_imagens/glass-oculos-preto-peq.png">
-
+</figure>
 Menu Principal
 - Home
 - Especificações
@@ -44,7 +41,13 @@ Menu Principal
 <h2>O que é</h2>
 <p>O <u>Google Glass</u> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferê&shy;ncias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-[AQUI ENTRA UMA FOTO]
+<figure class="foto-legenda">
+    <img src="_imagens/glass-quadro-homem-mulher.jpg">
+    <figcaption>
+        <h1>Google Glasses</h1>
+        <p>Uma nova maneira de ver o mundo</p>
+    </figcaption>
+</figure>
 
 <h2>Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
